# mlb-winprob

./: .dockerignore  .gitignore  AGENTS.md  DATA_SCHEMA.md  Dockerfile  MODEL_SPEC.md  README.md  SYSTEM_ARCHITECTURE.md  docker-compose.image.yml  docker-compose.yml  mlb-predict-pipeline.Rmd  pyproject.toml  start.bat  start.sh
.github/workflows/: ci.yml
docker/: crontab  entrypoint.sh  ingest_daily.sh  retrain_daily.sh  supervisord.conf
docs/: team_id_map_template.csv
proto/mlb_predict/v1/: admin.proto  betting.proto  common.proto  games.proto  models.proto  standings.proto  system.proto
proto/winprob/v1/: admin.proto  betting.proto  chat.proto  common.proto  games.proto  models.proto  standings.proto  system.proto
scripts/: build_crosswalk.py  build_features.py  build_features_2026.py  build_spring_features.py  capture_golden_api.py  chat.py  compute_drift.py  feature_importance.py  gen_proto.sh  ingest_all.py  ingest_fangraphs.py  ingest_odds.py  ingest_pitcher_stats.py  ingest_player_data.py  ingest_retrosheet_gamelogs.py  ingest_schedule.py  ingest_vegas.py  ingest_weather.py  monitor_admin_ingest.py  query_game.py  run_predictions.py  serve.py  train_model.py  update_daily.sh
src/mlb_predict/: errors.py  logging_config.py  season.py  standings.py
src/mlb_predict/app/: __init__.py  admin.py  auto_update.py  data_cache.py  game_detail_cache.py  main.py  odds_cache.py  response_cache.py  timing.py
src/mlb_predict/app/static/: base.css  base.js  ev-calculator.css
src/mlb_predict/app/templates/: 404_season.html  dashboard.html  ev_calculator.html  game.html  index.html  initializing.html  leaders.html  odds_hub.html  players.html  season_2026.html  sitemap.html  standings.html  wiki.html
src/mlb_predict/crosswalk/: build.py
src/mlb_predict/drift/: compute.py
src/mlb_predict/features/: __init__.py  builder.py  bullpen.py  elo.py  park_factors.py
src/mlb_predict/grpc/: __init__.py  server.py
src/mlb_predict/grpc/services/: __init__.py  admin.py  games.py  models.py  standings.py  system.py
src/mlb_predict/ingest/: id_map.py
src/mlb_predict/mcp/: __init__.py  server.py
src/mlb_predict/mlbapi/: client.py  game_feed.py  leaders.py  pitcher_stats.py  schedule.py  standings.py
src/mlb_predict/model/: artifacts.py  evaluate.py  train.py
src/mlb_predict/player/: biographical.py  embeddings.py  lineup_model.py  pitcher_gamelogs.py  rolling.py
src/mlb_predict/predict/: snapshot.py
src/mlb_predict/retrosheet/: gamelogs.py
src/mlb_predict/statcast/: fangraphs.py  player_stats.py
src/mlb_predict/storage/: __init__.py  duckdb_store.py
src/mlb_predict/tools/: __init__.py  run.py
src/mlb_predict/util/: hashing.py
src/winprob/: errors.py
src/winprob/app/: __init__.py  admin.py  data_cache.py  main.py  odds_cache.py  timing.py
src/winprob/app/static/: base.css  base.js  ev-calculator.css  ev-calculator.js
src/winprob/app/templates/: 404_season.html  chat.html  dashboard.html  ev_calculator.html  game.html  index.html  odds_hub.html  season_2026.html  sitemap.html  standings.html  wiki.html
src/winprob/crosswalk/: build.py
src/winprob/drift/: compute.py
src/winprob/features/: builder.py  bullpen.py  elo.py  lineup.py  park_factors.py  pitcher_stats.py  team_stats.py
src/winprob/grpc/: __init__.py  server.py
src/winprob/grpc/services/: __init__.py  admin.py  chat.py  games.py  models.py  ollama_adapter.py  standings.py  system.py
src/winprob/llm/: __init__.py  context.py  engine.py  knowledge.py  tools.py
src/winprob/mcp/: __init__.py  server.py
src/winprob/mlbapi/: client.py  pitcher_stats.py  schedule.py  standings.py  teams.py
src/winprob/model/: artifacts.py  evaluate.py  train.py
src/winprob/predict/: snapshot.py
src/winprob/statcast/: __init__.py  fangraphs.py  player_stats.py
src/winprob/tools/: __init__.py  knowledge.py  run.py
src/winprob/util/: hashing.py
tests/: conftest.py
tests/golden/: README.md  api_health.json  api_version.json
tests/integration/: __init__.py  test_chat_api.py  test_golden_api.py  test_odds_api.py  test_retrain_tier_api.py
tests/property/: test_properties.py
tests/unit/: test_admin_pipeline.py  test_admin_tier.py  test_api_seasons_column.py  test_artifacts_tier.py  test_bugfixes.py  test_crosswalk.py  test_game_feed.py  test_gamelogs.py  test_hashing.py  test_id_map.py  test_leaders.py  test_llm_context.py  test_llm_engine.py  test_llm_knowledge.py  test_llm_tools.py  test_mcp_server.py  test_mlbapi_client.py  test_odds_cache.py  test_player.py  test_schedule.py  test_season.py  test_sitemap.py  test_spring_features.py  test_standings.py  test_standings_api.py  test_startup_logic.py  test_teams.py  test_token_bucket.py  test_tools.py  test_tools_knowledge.py  test_train_spring.py
(+1 files in other folders)
