[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlb-winprob"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9",
  "aiofiles>=23.2",
  "orjson>=3.9",
  "pandas>=2.1",
  "pyarrow>=14.0",
  "python-dateutil>=2.9",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "lightgbm>=4.0",
  "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.8",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.12",
  "hypothesis>=6.0",
  "aioresponses>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/winprob"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
  # pandas 2.2+ deprecation: groupby apply include_groups default changing in future
  "ignore:DataFrameGroupBy.apply operated on the grouping columns:FutureWarning",
]
