[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlb-predict"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  # HTTP / async
  "aiohttp>=3.9",
  "aiofiles>=23.2",
  "orjson>=3.9",
  # Data
  "pandas>=2.1",
  "pyarrow>=14.0",
  "numpy>=1.26",
  "duckdb>=1.0",
  "python-dateutil>=2.9",
  "scipy>=1.12",
  # ML models
  "scikit-learn>=1.4",
  "lightgbm>=4.0",
  "xgboost>=2.0",
  "catboost>=1.2",
  "torch>=2.0",
  "joblib>=1.3",
  # Hyperparameter optimisation
  "optuna>=3.6",
  # Explainability
  "shap>=0.45",
  # External data sources
  "pybaseball>=2.2",
  # Web dashboard
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "jinja2>=3.1",
  # gRPC
  "grpcio>=1.60",
  "protobuf>=4.25",
  "grpcio-reflection>=1.60",
  # MCP server (streamable HTTP, same host as web UI)
  "fastmcp>=3.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.8",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.12",
  "hypothesis>=6.0",
  "aioresponses>=0.7",
  "types-aiofiles>=23.2",
  "grpcio-tools>=1.60",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mlb_predict"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Generated protobuf/grpc code; do not lint or format.
exclude = ["src/mlb_predict/grpc/generated"]

[tool.mypy]
python_version = "3.11"
# ML / data-science libraries (lightgbm, xgboost, shap, pybaseball) ship
# incomplete or no stubs — suppress the resulting "cannot find implementation"
# errors so the type check stays useful without generating noise.
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
# Exclude HTTP gateway (uses generated pb2; mypy doesn't see runtime-injected symbols).
exclude = [
  ".*/app/main\\.py$",
]
# gRPC services and generated code use protobuf modules; symbols are runtime-injected.
# Silence attr-defined and name-defined so CI passes; can add mypy-protobuf stubs later.
[[tool.mypy.overrides]]
module = ["mlb_predict.grpc.services.*", "mlb_predict.grpc.generated.*"]
disable_error_code = ["attr-defined", "name-defined"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:.*Event loop is closed.*:pytest.PytestUnraisableExceptionWarning",
]
